Update admin dashboard  (#148)
<!--- Please write your PR name in the present imperative tense.
Examples of that tense are: "Fix issue in the dispatcher where…",
"Improve our handling of…", etc." -->
<!-- For more information on Pull Requests, you can reference here:
https://success.vanillaforums.com/kb/articles/228-using-pull-requests-to-contribute
-->
## Describe Your Changes

Updated admin panel so it shows only relevant information -- includes
awards.

## Non-Obvious Technical Information

The award amount in denars is currently calculated by multiplying the
DENAR_FACTOR by points. It may be worth reading and writing this to the
database since we might change the DENAR_FACTOR.

## Checklist Before Requesting a Review
- [x] The code runs successfully.


![image](https://github.com/prijatelilab/PrijateliTree/assets/25271399/8d34cd70-44e2-4ac2-8cdc-a6941ee806d7)

--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -10,8 +10,13 @@ div.table-container {
     margin-top: 20px;
     max-height: 400px;
     overflow-y: auto;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding: 20px 30px 10px 20px;
+}
+
+#session_button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
 }
 
 div.table-container a.btn {
