Adding network text and margins

--- a/prijateli_tree/app/templates/start_of_game.html
+++ b/prijateli_tree/app/templates/start_of_game.html
@@ -16,7 +16,7 @@
         {% endif %}
       </h1>
     </div>
-    <h3>
+    <h3 style="margin-bottom: 20px;">
       {% if game.practice %}
         {{ text.intro_practice.since_these_rules }}
       {% else %}
