--- a/prijateli_tree/app/templates/networks.html
+++ b/prijateli_tree/app/templates/networks.html
@@ -1,5 +1,15 @@
 <div id="network"></div>
-<div id="network_legend"></div>
+<div id="network_legend">
+    <h3 style="margin-bottom: 20px; margin-top: 25px;">
+        {{ text.different_game_intro.this_diagram }}
+    </h3>
+    <h3 style="margin-bottom: 20px;">
+        {{ text.different_game_intro.each_circle }}
+    </h3>
+    <h3>
+        {{ text.different_game_intro.players_connected }}
+    </h3>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script>
     // https://observablehq.com/@harrylove/draw-lines-between-circles-nodes-using-d3-links
