Add network visuals (#124, #151)
## Describe Your Changes
- Added network template and code (added by @anisfeld )
- Created new database migration to add the `is_network_visible` column
to `games`
- Added new util script for administration
- Added new function to randomly decide if a game has the network
visible or not

## Non-Obvious Technical Information

- @anisfeld note that we are still missing the translations for the text
we want to show along the network!
- Note that the `is_network_visible` column is set to 'false' by default
and is not nullable

## Checklist Before Requesting a Review
- [x] The code runs successfully.

The games table looks like this:



![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/1b52b763-8b93-431c-9a24-d9ff5cd8231b)


And the networks template looks like this:
(with some randomization see below)
<img width="788" alt="Screenshot 2024-02-11 at 12 59 55 AM"
src="https://github.com/prijatelilab/PrijateliTree/assets/25271399/df86e191-c6ee-4149-963b-3a7c597ad9b2">

---------

Co-authored-by: Ari Anisfeld <ari.anisfeld@gmail.com>

--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -96,3 +96,11 @@ tr.empty-table {
       transform: rotate(360deg);
     }
   }
+
+
+  .tooltip {
+    position: absolute;
+    pointer-events: none;
+    color: #fff;
+
+  }
