--- a/prijateli_tree/app/templates/admin_login.html
+++ b/prijateli_tree/app/templates/admin_login.html
@@ -17,7 +17,11 @@
           <div class="mb-3 row">
             <label for="password" class="col-sm-3 col-form-label">Password:</label>
             <div class="col-sm-9">
-              <input type="password" class="form-control" id="password" name="password" required>
+              <input type="password"
+                     class="form-control"
+                     id="password"
+                     name="password"
+                     required>
             </div>
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
