--- a/prijateli_tree/app/templates/games/round.html
+++ b/prijateli_tree/app/templates/games/round.html
@@ -3,7 +3,7 @@
   PrijateliTree - View Round
 {% endblock title %}
 {% block content %}
-  {% include "score_header.html" %}
+  {% include "fragments/score_header.html" %}
   <div class="container-sm general-container">
     {% if first_round %}
       {{ text.game.the_computer_chose }}
