--- a/prijateli_tree/app/templates/games/start_of_game.html
+++ b/prijateli_tree/app/templates/games/start_of_game.html
@@ -24,7 +24,7 @@
       {% endif %}
     </h3>
     {% if game.is_network_visible %}
-      {% include "networks.html" %}
+      {% include "fragments/networks.html" %}
     {% endif %}
     <div class="p-5">
       <form method="get"
