--- a/prijateli_tree/app/templates/games/waiting.html
+++ b/prijateli_tree/app/templates/games/waiting.html
@@ -43,7 +43,7 @@
   PrijateliTree - Waiting
 {% endblock title %}
 {% block content %}
-  {% include "score_header.html" %}
+  {% include "fragments/score_header.html" %}
   <div class="container-sm general-container">
     <h1>{{ text.waiting_screen.waiting }}</h1>
     <br>
