--- a/prijateli_tree/app/templates/administration/admin_dashboard.html
+++ b/prijateli_tree/app/templates/administration/admin_dashboard.html
@@ -6,9 +6,17 @@
   <script>
      $(document).ready(function () {
       $('#sessions').DataTable({ order: [[0, 'desc']]});
-      $('#session_players').DataTable({order: [[0, 'desc'], [1, 'desc']]});
+      $('#session_players').DataTable({
+        order: [[0, 'desc'], [1, 'desc']],
+      layout: {
+          topStart: {
+              buttons: [
+                  'csvHtml5'
+              ]
+          }
+      }
+});
       $('#students').DataTable();
-    //   $('#game-types').DataTable();
      });
     function cleanParams() {
       // Used to clear the URL of parameters after the banner alert is closed.
@@ -155,38 +163,6 @@
             </tbody>
           </table>
         </div>
-        <!--
-      <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
-        <table id="game-types" class="table table-hover table-bordered caption-top text-center">
-          <caption>List of Game Types</caption>
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Network</th>
-              <th scope="col">Bag</th>
-              <th scope="col">Hidden Names</th>
-              <th scope="col">Number of Games</th>
-            </tr>
-          </thead>
-          <tbody class="table-group-divider">
-            {% if game_types|length == 0 %}
-              <tr class="empty-table">
-                <td colspan="5">There are no game types currently in the system.</td>
-              </tr>
-            {% endif %}
-            {% for gt in game_types|sort(attribute='-created_at') %}
-              <tr>
-                <th>{{ gt.id }}</th>
-                <td>{{ gt.network|title }}</td>
-                <td>{{ gt.bag }}</td>
-                <td>{{ gt.names_hidden }}</td>
-                <td>{{ gt.games|length }}</td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-    -->
       </div>
     </div>
   </div>
