--- a/prijateli_tree/app/templates/administration/admin_dashboard.html
+++ b/prijateli_tree/app/templates/administration/admin_dashboard.html
@@ -134,7 +134,7 @@
             <caption>List of Students</caption>
             <thead>
               <tr>
-                <th scope="col">Group Ids</th>
+                <th scope="col">Session Ids</th>
                 <th scope="col">First</th>
                 <th scope="col">Last</th>
                 <th scope="col">Language</th>
@@ -151,10 +151,7 @@
               {% endif %}
               {% for s in students %}
                 <tr>
-                  <th> {% for g in s.random_group %}
-                    {{ g.group_id }}
-                    {% endfor %}
-                  </th>
+                  <td> {% for g in s.random_group %}{{ g.group_id }}{% endfor %}</td>
                   <td>{{ s.first_name }}</td>
                   <td>{{ s.last_name }}</td>
                   <td>{{ s.language.name }}</td>
