--- a/prijateli_tree/app/templates/administration/create_session.html
+++ b/prijateli_tree/app/templates/administration/create_session.html
@@ -30,21 +30,44 @@
       const formData = new FormData();
       const numbers = ["one", "two", "three", "four", "five", "six"]
       const languageCounter = {}
+      const groupCounter = {}
+
+      if (selectedRows.length != 6) {
+        alert("Must select 6 students")
+        return
+      }
 
       for (i in selectedRows) {
         formData.append("player_" + numbers[i], parseInt(selectedRows[i][0]))
         lang = selectedRows[i][1]
         languageCounter[lang] = languageCounter[lang] ? languageCounter[lang]  + 1 : 1;
+        groups = selectedRows[i][2].split('\n').map(s => s.trim());
+        for (const g of groups) {
+          if (g) { // g can be "" 
+            groupCounter[g] = groupCounter[g] ? groupCounter[g]  + 1 : 1;
+          }
+        }
       }
       const languageCounts = Object.values(languageCounter)
-      if (selectedRows.length != 6) {
-        alert("Must select 6 students")
+      
+      // Test group/session id memberships
+      let sessionKey = null;
+      let maxValue = -Infinity;
+      for (const [key, value] of Object.entries(groupCounter)) {
+        if (value > maxValue) {
+          maxValue = value;
+          sessionKey= key;
+        }
+      }
+
+      if ( maxValue != 6) {
+        alert("Must select 6 students from same session")
         return
       } else if (languageCounts[0] != 3 || languageCounts[1] != 3) {
         alert("A session must contain exactly 3 players from distinct mother tongues")
         return
       }
-
+      formData.append("session_key", sessionKey)
       console.log(formData)
 
       fetch('{{ url_for("create_session") }}', {
@@ -86,6 +109,7 @@
           <tr>
             <th scope="col">ID</th>
             <th scope="col">Language</th>
+            <th scope="col">Session IDs</th>
             <th scope="col">Name</th>
             <th scope="col">Email</th>
             <th scope="col">Grade</th>
@@ -103,6 +127,10 @@
               <!-- hidden columns referenced in js-->
               <td>{{ s.id }}</td>
               <td>{{ s.language.abbr }}</td>
+              <td> {% for g in s.random_group %}
+                {{ g.group_id }}
+                {% endfor %}
+              </td>
               <td>{{ s.name_str }}</td>
               <td>{{ s.email }}</td>
               <td>{{ s.grade_level }}</td>
