--- a/prijateli_tree/app/templates/administration/admin_dashboard.html
+++ b/prijateli_tree/app/templates/administration/admin_dashboard.html
@@ -5,7 +5,7 @@
 {% block helper_script %}
   <script>
      $(document).ready(function () {
-      $('#sessions').DataTable({ order: [[0, 'desc']]});
+      $('#sessions').DataTable({ order: [[0, 'desc'], [2, 'desc']]});
       $('#session_players').DataTable({
         order: [[0, 'desc'], [1, 'desc']],
       layout: {
@@ -23,9 +23,9 @@
       window.history.replaceState(null, '', window.location.pathname);
     }
 
-    const copyToClipboard = async (id) => {
+    const copyToClipboard = async (key) => {
       try {
-        await navigator.clipboard.writeText(`${window.location.host}/games/session/${id}`);
+        await navigator.clipboard.writeText(`${window.location.host}/games/session/${key}`);
       } catch (error) {
         console.error("Failed to copy to clipboard:", error);
       }
@@ -59,7 +59,8 @@
                  class="table table-hover table-bordered caption-top text-center">
             <thead>
               <tr>
-                <th scope="col">ID</th>
+                <th scope="col">Id</th>
+                <th scope="col">Key</th>
                 <th scope="col">Date</th>
                 <th scope="col">Number of Games</th>
                 <th scope="col">Players</th>
@@ -74,7 +75,8 @@
               {% endif %}
               {% for s in sessions|sort(attribute='-created_at') %}
                 <tr>
-                  <th>{{ s.id }}</th>
+                  <td>{{ s.id }} </td>
+                  <td>{{ s.session_key }}</td>
                   <td>{{ s.created_at.date() }}</td>
                   <td>{{ s.num_games }}</td>
                   <td>{{ s.player_string }}</td>
@@ -82,7 +84,7 @@
                     {% if not s.finished %}
                       <button role="button"
                               class="btn btn-primary btn-sm"
-                              onclick="copyToClipboard({{ s.id }})">Copy to Clipboard</button>
+                              onclick="copyToClipboard({{ s.session_key }})">Copy to Clipboard</button>
                     {% endif %}
                   </td>
                 </tr>
