--- a/prijateli_tree/app/templates/administration/admin_dashboard.html
+++ b/prijateli_tree/app/templates/administration/admin_dashboard.html
@@ -18,7 +18,7 @@
       });
       $('#students').DataTable();
      });
-    
+
      function cleanParams() {
       // Used to clear the URL of parameters after the banner alert is closed.
       window.history.replaceState(null, '', window.location.pathname);
@@ -76,7 +76,7 @@
               {% endif %}
               {% for s in sessions|sort(attribute='-created_at') %}
                 <tr>
-                  <td>{{ s.id }} </td>
+                  <td>{{ s.id }}</td>
                   <td>{{ s.session_key }}</td>
                   <td>{{ s.created_at.date() }}</td>
                   <td>{{ s.num_games }}</td>
@@ -154,7 +154,9 @@
               {% endif %}
               {% for s in students %}
                 <tr>
-                  <td> {% for g in s.random_group %}{{ g.group_id }}{% endfor %}</td>
+                  <td>
+                    {% for g in s.random_group %}{{ g.group_id }}{% endfor %}
+                  </td>
                   <td>{{ s.first_name }}</td>
                   <td>{{ s.last_name }}</td>
                   <td>{{ s.language.name }}</td>
