--- a/prijateli_tree/app/templates/games/round.html
+++ b/prijateli_tree/app/templates/games/round.html
@@ -2,6 +2,15 @@
 {% block title %}
   PrijateliTree - View Round
 {% endblock title %}
+{% block helper_script %}
+  <script>
+document.addEventListener('DOMContentLoaded', function() {
+  setTimeout(function() {
+    document.getElementById('delayedButtons').style.display = 'block';
+  }, 3000); // Change 3000 to however many milliseconds you want to wait
+});
+  </script>
+{% endblock helper_script %}
 {% block content %}
   {% include "fragments/score_header.html" %}
   <div class="container-sm general-container">
@@ -47,12 +56,14 @@
     {% endif %}
     <h1>{{ text.game.guess_color }}</h1>
     <!-- Button for 'Red' answer -->
-    <form action="{{ url_for('route_add_answer', game_id=game_id, player_id=player_id) }}"
-          method="post">
-      <div class="d-grid gap-2 d-md-block">
-        <button type="submit" name="player_answer" value="R" class="btn btn-danger">{{ text.util.red }}</button>
-        <button type="submit" name="player_answer" value="B" class="btn btn-primary">{{ text.util.blue }}</button>
-      </div>
-    </form>
+    <div id="delayedButtons" style="display: none;">
+      <form action="{{ url_for('route_add_answer', game_id=game_id, player_id=player_id) }}"
+            method="post">
+        <div class="d-grid gap-2 d-md-block">
+          <button type="submit" name="player_answer" value="R" class="btn btn-danger">{{ text.util.red }}</button>
+          <button type="submit" name="player_answer" value="B" class="btn btn-primary">{{ text.util.blue }}</button>
+        </div>
+      </form>
+    </div>
   </div>
 {% endblock content %}
