rounding denars to nearest 50

--- a/prijateli_tree/app/templates/administration/admin_dashboard.html
+++ b/prijateli_tree/app/templates/administration/admin_dashboard.html
@@ -122,7 +122,7 @@
                   <td>{{ sp.user.first_name + ' ' + sp.user.last_name }}</td>
                   <td>{{ sp.correct_answers }}</td>
                   <td>{{ sp.points }}</td>
-                  <td>{{ sp.points * DENAR_FACTOR }}</td>
+                  <td>{{ sp.denars }}</td>
                 </tr>
               {% endfor %}
             </tbody>
