--- a/prijateli_tree/app/templates/games/round.html
+++ b/prijateli_tree/app/templates/games/round.html
@@ -21,7 +21,7 @@ function submit(player_answer) {
     'player_answer',
     player_answer
   )
-  
+
   fetch('{{ url_for("route_add_answer", game_id=game_id, player_id=player_id) }}', {
           method: 'POST',
           body: formData,
@@ -32,7 +32,7 @@ function submit(player_answer) {
       .catch(error => {
           console.error(error);
       });
-  
+
 }
 
   </script>
@@ -81,12 +81,17 @@ function submit(player_answer) {
       </ul>
     {% endif %}
     <h1>{{ text.game.guess_color }}</h1>
-    
     <div id="delayedButtons" style="display: none;">
-        <div class="d-grid gap-2 d-md-block">
-          <button onclick=submit('R') name="player_answer" value="R" class="btn btn-danger">{{ text.util.red }}</button>
-          <button onclick=submit('B') name="player_answer" value="B" class="btn btn-primary">{{ text.util.blue }}</button>
-        </div>
+      <div class="d-grid gap-2 d-md-block">
+        <button onclick="submit('R')"
+                name="player_answer"
+                value="R"
+                class="btn btn-danger">{{ text.util.red }}</button>
+        <button onclick="submit('B')"
+                name="player_answer"
+                value="B"
+                class="btn btn-primary">{{ text.util.blue }}</button>
+      </div>
     </div>
   </div>
 {% endblock content %}
